fix: Account for scrollbar in header and footer

--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 12px 16px;
+    padding: 12px 32px;
 }
 
 .copyright {
