--- a/static/css/menu.css
+++ b/static/css/menu.css
@@ -15,7 +15,7 @@
 
 .menu--open .menu__frame,
 .menu--open .menu__search {
-  right: -16px;
+  right: -32px;
   max-height: 40em;
 }
 
@@ -32,7 +32,7 @@
 .menu__item {
   width: 100%;
   box-sizing: border-box;
-  padding: 0 16px;
+  padding: 0 32px;
 }
 
 .menu__item:last-child .menu__heading {
@@ -225,6 +225,7 @@
 
   .menu__item {
     width: auto;
+    padding: 0 14px;
   }
   
   .menu__search {
@@ -288,7 +289,7 @@
   }
 }
 
-@media screen and (min-width: 1080px) {
+@media screen and (min-width: 1100px) {
   .menu--create .menu__heading::after {
     display: inline-block;
   }
