--- a/static/css/search.css
+++ b/static/css/search.css
@@ -1,5 +1,5 @@
 .search {
-    padding: 0 16px;
+    padding: 0 32px;
     box-sizing: border-box;
 }
 
