--- a/static/css/style.css
+++ b/static/css/style.css
@@ -70,23 +70,25 @@ html {
   margin: 0 auto 16px;
   display: grid;
   grid-gap: 16px;
-  grid-template-columns: 288px;
+  grid-template-columns: 1fr;
+  /* grid-auto-rows: minmax(100px, auto); */
 }
 
 @media screen and (min-width: 624px) {
   .cards {
-    grid-template-columns: 288px 288px;
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
 @media screen and (min-width: 928px) {
   .cards {
-    grid-template-columns: 288px 288px 288px;
+    grid-template-columns: repeat(3, 1fr);
+    /* width: calc(100vw - 32px); */
   }
 }
 
 @media screen and (min-width: 1200px) {
   .cards {
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
   }
 }
